--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
        <button id="backToTop">
-                <a href="./inicio.html">Volver al Inicio</a>
+                <a href="https://jd-354.github.io/mundo.api/">Volver al Inicio</a>
             </button>
         <header class="text-center">
             <h1>Pokémon API JD</h1>
